Cleaned up stylesheet and fixed padding and gaps.

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -7,7 +7,6 @@ body {
   font-family: Roboto, sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 img {
@@ -19,6 +18,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
@@ -30,7 +30,11 @@ input {
 }
 
 ul {
+  display: flex;
   list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
 }
 
 a {
@@ -38,9 +42,11 @@ a {
   padding: 16px;
 }
 
-.header {
+.header,
+.footer {
   display: flex;
   justify-content: space-between;
+  padding: 16px;
 }
 
 .left-links {
@@ -53,13 +59,11 @@ a {
 
 .content {
   display: flex;
+  flex: 1;
   justify-content: center;
   flex-direction: column;
-  align-self: center;
-}
-
-.input {
-  align-self: center;
+  align-items: center;
+  gap: 16px;
 }
 
 .buttons {
@@ -67,7 +71,5 @@ a {
 }
 
 .footer {
-  display: flex;
-  justify-content: space-between;
   background: #eeeeee;
 }
